@startuml
class Field{
  .. Variables ..
  -name_ : QString
  -type_ : Type
  -text_ : Type
  -font_ : QFont
  -image_ : QImage

  .. Methods ..
  +QString name()
  +Type type()
  +QString text()
  +QFont font()
  +QImage image()

  .. Slots ..
  +bool parse(const QJsonObject &json_node)
  +bool write(QJsonObject &json_node)
  +void setName(const QString &name)
  +void setType(const Type &type)
  +void setText(const QString &text)
  +void setFont(const QFont &font)
  +void setImage(const QImage &image)
  +QString toString()

  .. Signals ..
  +void nameChanged(QString)
  +void typeChanged(Type)
  +void textChanged(QString)
  +void fontChanged(QFont)
  +void imageChanged(QImage)
}
class Card{
  .. Variables ..
  -card_size_ : QPageSize
  -card_orientation_ : QPageLayout::Orientation
  -styles_[2] : Style
  -card_fields_[2] : QVector<Field *>

  .. Methods ..
  -bool parseCard(const QJsonObject &json_node, Card::Site site)
  -bool writeCard(QJsonObject &json_node, Card::Site site)

  +bool parse(const QJsonObject &json_node)
  +bool write(QJsonObject &json_node)
  +Card::Style getStyle(Card::Site site)
  +Field *getField(const QString &name, Site site)
  +QVector<QString> getFieldNames(Site site)
  +QPageLayout::Orientation orientation()
  +QPageSize size()
  +QString toString()

  .. Slots ..
  +void setStyle(Card::Site site, Card::Style style)
  +void setOrientation(QPageLayout::Orientation orientation)
  +void setSize(const QPageSize& size)

  ... Signals ...
  +void styleChanged(Card::Site site, Card::Style style)
  +void orientationChanged(QPageLayout::Orientation orientation)
  +void sizeChanged(QPageSize size)
}

class JsonParser{
  .. Methods ..
  +{static} QFont toFont(const QJsonObject &json_node)
  +{static} QJsonObject fontToJson(const QFont &font)
  
  +{static} QJsonValue imageToJson(const QImage &image)
  +{static} QImage toImage(const QJsonValue &json_node)
}

class Model{
  .. Variables ..
  -default_card : std::shared_ptr<Card> 

  .. Methods ..
  -Model()
  -bool loadDefaultCard(const QString &file_name)
  -bool storeCard(const QString &file_name)

  +{static} Model *instance()
  +void init()
  +bool loadConfig()
  +bool storeConfig()
  +void free()
  +std::weak_ptr<Card> defaultCard()
}

Card "1" *-right- "1..*" Field
Card -- JsonParser : > use for parsing
Field -- JsonParser : > use for parsing
Model o-down- "1..*" Card


@enduml